src/test/deca/context/invalid/champ_objet_init_int.deca
// Description :
// Initialisation d'un champ de type classe avec un int comme celui d avant impossible

// Resultats :
// Echec

class Stade { }

class Match {
    Stade lieu = 1;
}

{ }